Implementing HTML and content.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Liam Durkin - Software Engineer</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header class="site-wrapper">
-
-    </header>
-    <main class="site-main-body">
-
-    </main>
-    <footer class="site-footer">
-
-    </footer>
-  </body>
+    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+</head>
+<body>
+<header class="site-wrapper">
+    <h1>Liam Durkin - Software Engineer</h1>
+</header>
+<main class="site-main-body">
+    <section>
+        <h2>About Me</h2>
+        <p>
+            I am currently a Senior Software Engineer at Sky Bet, primarily working with Kotlin/JVM to develop resilient backend and event-driven services.
+        </p>
+        <p>
+            After graduating from the University of Lincoln with a degree in Sports Business Management, I began my career in the gambling industry at William Hill, working in retail. I later joined Sky Bet as a Sports Trader, where I gained experience in the operational side of trading.
+        </p>
+        <p>
+            During my time in the trading team, I started learning the basics of programming by building, supporting, and enhancing Excel-based VBA tools used across the department. As the reliance on these tools grew, a small trading-focused technology team was established. When the team began adopting more scalable and supportable technologies, I was offered the opportunity to join them and focus on software engineering full-time.
+        </p>
+        <p>
+            Since moving into software engineering, I have worked on a variety of projects, from supporting existing services to building new, high-quality services from scratch. As my skills and experience have developed, so has my role within the team. I have progressed from being a junior engineer to a senior engineer, mentoring and guiding junior colleagues and contributing to the strategic direction of the team.
+        </p>
+    </section>
+    <section>
+    <h2>Experience</h2>
+        <div>
+            <h3>2023 - Current</h3>
+            <h3>Senior Software Engineer</h3>
+            <h4>Sky Bet</h4>
+            <p>Responsibilities</p>
+        </div>
+        <div>
+            <h3>? - 2023</h3>
+            <h3>Software Engineer</h3>
+            <h4>Sky Bet</h4>
+            <p>Responsibilities</p>
+        </div>
+        <div>
+            <h3>2014 - ?</h3>
+            <h3>Sports Trader</h3>
+            <h4>Sky Bet</h4>
+            <p>Responsibilities</p>
+        </div>
+    </section>
+</main>
+<footer class="site-footer">
+    <section>
+        <ul role="list">
+            <li><a href="https://tinyurl.com/liam-durkin"><i class="fa-brands fa-linkedin"></i></a>Connect on LinkedIn</li>
+            <li><a href="mailto:b347c810-7709-4173-91b0-cb48789984aa@anonaddy.me"><i class="fa-solid fa-envelope"></i></a>E-mail me</li>
+        </ul>
+    </section>
+    <section>
+        <p>© 2025 Liam Durkin</p>
+    </section>
+</footer>
+</body>
 </html>
